--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "vue-loader": "^15.9.3",
